Fixed an exception from the plugin option pane when opening it the first time, due to attempting to convert the string property "reloadDelay", which does not exist the first time, to an integer.
Moved all the classes that were previously in the default package to 'clearcase'.